--- a/day-12_Apr16/index.css
+++ b/day-12_Apr16/index.css
@@ -11,7 +11,7 @@ body{
 }
 div.container{
     /* border: 2px solid green; */
-    box-shadow: 0 0 10px black;
+    box-shadow: 10px 10px 10px 0px black;
     border-radius: 5px;
     padding: 50px;
     text-align: center;
