--- a/day-12_Apr16/index.css
+++ b/day-12_Apr16/index.css
@@ -9,8 +9,8 @@ body{
     height: 100vh;
     background-color: chocolate;
 }
-div.container{
-    /* border: 2px solid green; */
+/* div.container{
+    border: 2px solid green;
     box-shadow: 10px 10px 10px 0px black;
     border-radius: 5px;
     padding: 50px;
@@ -24,4 +24,24 @@ div.container{
     padding: 5px;
     border-radius: 5px;
     background-color: aquamarine;
+} */
+#imageTag{
+    width: 50%;
+    height: 50%;
+    border: 2px solid green;
+    text-align: center;
+    margin: 7% auto;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
+#btnFamily{
+padding: 10px 20px; 
+margin: 10px 20px;
+
+}
+#btnFriends{
+ padding: 10px 20px; 
+ margin: 10px 20px;
 }
