--- a/day-12_Apr16/index.css
+++ b/day-12_Apr16/index.css
@@ -9,7 +9,7 @@ body{
     height: 100vh;
     background-color: chocolate;
 }
-/* div.container{
+div.container{
     border: 2px solid green;
     box-shadow: 10px 10px 10px 0px black;
     border-radius: 5px;
@@ -24,7 +24,7 @@ body{
     padding: 5px;
     border-radius: 5px;
     background-color: aquamarine;
-} */
+}
 #imageTag{
     width: 50%;
     height: 50%;
