--- a/day-13_Apr17/3/index.css
+++ b/day-13_Apr17/3/index.css
@@ -3,3 +3,23 @@
     margin: 0%;
     padding: 0%;
 }
+div{
+    width: 100%;
+}
+tr:nth-child(even){
+    background-color: rgb(214, 233, 233);
+}
+table{
+    border-collapse:collapse;
+    margin-left: 5%;
+    margin-top: 0;
+}
+td{
+    padding: 10px;
+}
+
+th{
+    padding: 10px;
+    border: 1 ;
+    border-bottom: solid;
+}
