--- a/day-17_Apr22/index.css
+++ b/day-17_Apr22/index.css
@@ -4,8 +4,72 @@
     padding: 0%;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.first-wala-tag{
-    border: 2px solid red;
+.mainContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(54, 66, 88);
+}
+.innercontainer{
+    margin: 4% 0 3% 0;
+    width: 30%;
     text-align: center;
+    padding: 15px;
+    border: 2px solid gray;
+    border-radius: 5px;
+    background-color: rgb(221, 238, 243);
+}
+.headingDiv{
+    margin-bottom: 50px;
+}
+.first-wala-tag{
+    letter-spacing: 2px;
+        
+}
+.underline{
+    border-bottom: 2px solid rgb(5, 155, 201) ;
+    border-width: 3px;
+    margin-top: 10px;
+    width:15%;
+    margin-left: 44%;
+}
+.Card{
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px;
+}
+#imagetag{
+    width: 50%;
+    border-radius: 150px;
+    background-color: orange;
+}
+.name{
+    letter-spacing: 3px;
+    font-weight: 900;
+    margin-top: 10px;
+}
+.job{
+    color: rgb(5, 155, 201);
+    text-transform: uppercase;
+     margin: 5px;
+     font-weight: 500;
+}
+.about{
+    margin-top: 10px;
+    color: gray;
+}
+#previousBtn, #nextBtn {
+    all: unset;
+   color: rgb(5, 155, 201);
+   font-weight:bolder;
+    margin-inline:20px;
+    font-size: 30px;
+}
+#showrandom{
+    border: 2px solid rgb(5, 155, 201);
+    padding: 5px;
+    border-radius: 10px;
+    color: rgb(5, 155, 201);
+    font-weight: 700;
+    margin-top: 10px;
 }
