--- a/day-18_Apr23/index.css
+++ b/day-18_Apr23/index.css
@@ -146,6 +146,10 @@ ul li{
   font-weight: 550;
   font-size: 1rem;
 }
+input:focus{
+    outline: none;
+    color: #2874ef;
+}
 #searchOrderBtn{
   width: 14%;
   color: #fefefe;
@@ -158,32 +162,98 @@ ul li{
 
 .olderItems{
     background-color: #fefefe;
-    width: 50%;
-    height: 50%;
+    width: 40%;
     display: flex;
     flex-direction: row;
+    align-content: center;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
+    flex-wrap: nowrap;
     padding: 15px;
-    margin-top: 10px;
-}
-.itemImagetag{
-    margin-right:10px;
-}
-.itemDetails h4{
-    padding: 10px;
+    margin-top: 5px;
 }
 .childRightBottom{
     width: 100%;
     height: 60%;
-    background-color:rgb(0, 45, 128);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    padding-top: 20px;
+    padding-right: 20px;
 }
 .card{
     width: 100%;
     height: 48%;
-    background-color: aqua;
+    background-color:#fefefe;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    color: rgba(66, 66, 68, 0.979);
 } 
+.cardLeft{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding: 20px;
+}
+.cardMid{
+    width: 20%;
+    font-weight: 700;
+    text-align: center;    
+}
+.cardRight{
+    width: 40%;
+}
+.cardRight, h4, small {
+    margin: 10px;
+
+}
+img{
+    width: 80px;
+    height: 80px;
+}
+.itemImagetag{
+width: 30%;
+
+}
+.itemDetails{
+ width: 70%;
+ 
+}
+
+.dropdown {
+    position: relative;
+    display: inline;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position:absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display:block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
